--- a/moduuli1/1.html
+++ b/moduuli1/1.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tehtävä 1</title>
 </head>
 <body>
-
 <script>
+  'use strict';
   console.log("I'm printing to console!");
 </script>
-
 </body>
 </html>
