--- a/moduuli1/6.html
+++ b/moduuli1/6.html
@@ -12,7 +12,12 @@
     question = confirm("Should I calculate the square root?");
     if (question===true) {
       number = parseFloat(prompt('Insert a number'));
-      document.querySelector('#target').innerHTML = `The square root of the number ${number} is ${Math.sqrt(number)}`;
+      if (number<0) {
+        document.querySelector('#target').innerHTML = 'The square root of a negative number is not defined';
+      }
+      else {
+        document.querySelector('#target').innerHTML = `The square root of the number ${number} is ${Math.sqrt(number)}`;
+      }
     }
     else {
       document.querySelector('#target').innerHTML = 'The square root is not calculated';
